--- a/aditya/cv/extracurricular.tex
+++ b/aditya/cv/extracurricular.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 % SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Projects \& Skill Highlights}
+\cvsection{Projects \& Highlights}
 
 %-------------------------------------------------------------------------------
 % CONTENT
@@ -12,7 +12,7 @@
 
   \cventry
     {Leadership \& Teamplayer} % Affiliation/role
-    {Demonstrated leadership as team leader in all mentioned competitions} % Organization/group
+    {Demonstrated leadership as a team leader in all the competitions mentioned above} % Organization/group
     {Hackathon} % Location
     {-} % Date(s)
     {}
